--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta property="og:url" content="http://presentheo.github.io/">
+    <meta property="og:title" content="PORTFOLIO 2019">  
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/images/ogimage.png">
+    <meta property="og:description" content="Present.Heo's portfolio web site">
+    <meta name="description" content="Present.Heo's portfolio web site">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PORTFOLIO.2019</title>
   </head>
